--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ant-design/pro-layout": "^6.5.0",
     "ahooks": "^3.1.9",
     "babel-plugin-import": "^1.13.3",
-    "dropdown-table": "^0.0.7",
+    "count-up-es-react": "^0.0.3",
+    "dropdown-table": "^0.0.9",
     "react": "17.x",
+    "react-bmapgl": "^0.1.28",
     "react-color": "^2.19.3",
     "react-dom": "17.x",
     "umi": "^3.5.20"
